--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>My Test Website</h1>
     <p>Testing my Salesforce Live Agent Chat...</p>
+	<button id="liveChatBtn" type="button">Live Chat with Infra</button>
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
